--- a/CargoTransportApp.Services.CustomerAPI/Properties/launchSettings.json
+++ b/CargoTransportApp.Services.CustomerAPI/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52933",
-      "sslPort": 44350
+      "applicationUrl": "http://localhost:35082",
+      "sslPort": 44326
     }
   },
   "profiles": {
-    "Cargo.Services.Identity": {
+    "CargoTransportApp.Services.CustomerAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7195;http://localhost:5292",
+      "applicationUrl": "https://localhost:7279;http://localhost:5021",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
