--- a/CargoTransportApp.Services.OrderAPI/Properties/launchSettings.json
+++ b/CargoTransportApp.Services.OrderAPI/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:20910",
-      "sslPort": 44365
+      "applicationUrl": "http://localhost:8328",
+      "sslPort": 44304
     }
   },
   "profiles": {
-    "Cargo.Services.Company": {
+    "CargoTransportApp.Services.OrderAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7295;http://localhost:5238",
+      "applicationUrl": "https://localhost:7151;http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
